policies/k8s-block-latest-tag.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblocklatesttag
  annotations:
    description: "Blocks container images using the :latest tag or no tag"
spec:
  crd:
    spec:
      names:
        kind: K8sBlockLatestTag
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblocklatesttag

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          image := container.image
          endswith(image, ":latest")
          msg := sprintf("Container '%v' uses :latest tag, which is not allowed in production", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          image := container.image
          not contains(image, ":")
          msg := sprintf("Container '%v' has no tag specified (defaults to :latest)", [container.name])
        }
